[gd_scene load_steps=2 format=3 uid="uid://l1hdowu84hpr"]

[ext_resource type="Script" path="res://addons/localization_editor/scripts/open_file_popup.gd" id="1_odm6l"]

[node name="OpenFilePopup" type="Popup" node_paths=PackedStringArray("_file_dialog", "_line_edit", "_open_button", "_delimiter_option")]
title = "Open File"
initial_position = 2
size = Vector2i(400, 137)
visible = true
borderless = false
script = ExtResource("1_odm6l")
_file_dialog = NodePath("FileDialog")
_line_edit = NodePath("MarginContainer/VBoxContainer/HBoxContainer/LineEdit")
_open_button = NodePath("MarginContainer/VBoxContainer/Button")
_delimiter_option = NodePath("MarginContainer/VBoxContainer/HBoxContainer2/OptionButton")

[node name="FileDialog" type="FileDialog" parent="." groups=["file_access"]]
mode = 1
title = "Open a File"
initial_position = 2
size = Vector2i(425, 300)
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.csv;CSV Translation")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Browse"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Delimiter"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 3
selected = 0
popup/item_0/text = "Comma (,)"
popup/item_0/id = 0
popup/item_1/text = "Semicolon (;)"
popup/item_1/id = 1
popup/item_2/text = "Tab (\\t)"
popup/item_2/id = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Open"

[connection signal="about_to_popup" from="." to="." method="_on_about_to_popup"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Button" to="FileDialog" method="popup_centered"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/HBoxContainer2/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button" to="." method="_on_open_button_pressed"]
